external-crates/move/crates/move-compiler/tests/development/typing/signed_int_copy_drop.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01003]: invalid modifier
   ┌─ tests/development/typing/signed_int_copy_drop.move:20:5
   │
20 │     struct S has copy, drop {
   │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
   │
   = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.
